--- a/.project.json
+++ b/.project.json
@@ -6,7 +6,7 @@
     {
       "templateId": "custdev.sapui5.fioriapp",
       "templateVersion": "1.0.0",
-      "dateTimeStamp": "<%= new Date().toString() %>"
+      "dateTimeStamp": "Sat May 20 2017 14:17:29 GMT+0800 (中国标准时间)"
     }
   ],
   "codeCheckingTriggers": {
