--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-ui5": "^6.1.0",
     "browser-sync": "^2.18.11",
     "del": "^2.2.2",
+    "run-sequence": "^1.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-less": "^3.3.0",
     "gulp-mem": "^0.1.0",
+    "gulp-filter": "^5.0.0",
     "gulp-sourcemaps": "^2.6.0",
     "http-proxy-middleware": "^0.17.4",
     "merge-stream": "^1.0.1",
     "run-sequence": "^1.2.2",
-    "gulp-eslint": "^3.0.1"
+    "gulp-eslint": "^3.0.1",
+    "gulp-ui5-preload": "^1.3.1",
+    "@types/openui5": "^1.40.1"
   }
 }
