--- a/neo-app.json
+++ b/neo-app.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "path": "/webapp/resources",
+      "path": "/src/resources",
       "target": {
         "type": "application",
         "name": "sapui5preview",
@@ -10,7 +10,7 @@
       "description": "SAPUI5 Resources"
     },
     {
-      "path": "/webapp/resources",
+      "path": "/src/resources",
       "target": {
         "type": "service",
         "name": "sapui5",
@@ -19,7 +19,7 @@
       "description": "SAPUI5 Resources"
     },
     {
-      "path": "/webapp/test-resources",
+      "path": "/src/test-resources",
       "target": {
         "type": "application",
         "name": "sapui5preview",
@@ -28,7 +28,7 @@
       "description": "SAPUI5 Test Resources"
     },
     {
-      "path": "/webapp/test-resources",
+      "path": "/src/test-resources",
       "target": {
         "type": "service",
         "name": "sapui5",
