--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
 	"_version": "1.1.0",
 	"sap.app": {
 		"_version": "1.1.0",
-		"id": "sap.ui5.demo.walkthrough",
+		"id": "org.fornever.ui5demo",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
@@ -34,7 +34,7 @@
 	},
 	"sap.ui5": {
 		"_version": "1.1.0",
-		"rootView": "sap.ui5.demo.walkthrough.view.App",
+		"rootView": "org.fornever.ui5demo.view.App",
 		"dependencies": {
 			"minUI5Version": "1.30",
 			"libs": {
@@ -45,7 +45,7 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "sap.ui5.demo.walkthrough.i18n.i18n"
+					"bundleName": "org.fornever.ui5demo.i18n.i18n"
 				}
 			},
 			"invoice": {
@@ -63,7 +63,7 @@
 			"config": {
 				"routerClass": "sap.m.routing.Router",
 				"viewType": "XML",
-				"viewPath": "sap.ui5.demo.walkthrough.view",
+				"viewPath": "org.fornever.ui5demo.view",
 				"controlId": "app",
 				"controlAggregation": "pages"
 			},
