--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "browser": true,
@@ -9,6 +12,9 @@
     "amd": true,
     "qunit": true
   },
+  "plugins": [
+    "react"
+  ],
   "globals": {
     "sap": true,
     "jQuery": true,
@@ -187,6 +193,22 @@
         "words": true,
         "nonwords": false
       }
-    ]
+    ],
+    "react/display-name": 0,
+    "react/jsx-boolean-value": 0,
+    "react/jsx-no-comment-textnodes": 1,
+    "react/jsx-no-duplicate-props": 2,
+    "react/jsx-no-undef": 0,
+    "react/jsx-sort-props": 0,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-multi-comp": 0,
+    "react/no-string-refs": 1,
+    "react/no-unknown-property": 0,
+    "react/prop-types": 0,
+    "react/self-closing-comp": 1,
+    "react/wrap-multilines": 0
   }
 }
