--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ui5-workthrough",
+  "name": "ss03",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node_modules/.bin/gulp",
-    "build": "node_modules/.bin/gulp build",
-    "webpack": "webpack"
+    "build": "node_modules/.bin/gulp build"
   },
   "devDependencies": {
     "@types/openui5": "^1.40.1",
@@ -13,6 +12,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-check-es2015-constants": "^6.3.13",
     "babel-plugin-syntax-class-properties": "^6.5.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
@@ -32,11 +32,14 @@
     "babel-plugin-transform-es2015-sticky-regex": "^6.3.13",
     "babel-plugin-transform-es2015-template-literals": "^6.6.0",
     "babel-plugin-transform-es2015-typeof-symbol": "^6.6.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-es2015-unicode-regex": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.6.0",
+    "babel-plugin-ui5-next": "^1.2.0",
     "browser-sync": "2.26.3",
     "del": "^2.2.2",
     "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "gulp": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^5.0.0",
@@ -45,12 +48,11 @@
     "gulp-mem": "^0.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-ui5-preload": "^1.3.1",
+    "lodash": "^4.17.11",
     "http-proxy-middleware": "^0.17.4",
     "loader-utils": "^1.1.0",
     "merge-stream": "^1.0.1",
     "openui5-webpack-plugin": "^0.3.0",
-    "run-sequence": "2.2.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "run-sequence": "2.2.1"
   }
 }
